--- a/src/homepage/templates/sign_up_marketing.html
+++ b/src/homepage/templates/sign_up_marketing.html
@@ -2,6 +2,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Get invited for the beta launch" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+    <br>
+    <input type="submit" value="Claim your invite for the beta launch" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
 </form>
 {% endblock %}
