--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -8,6 +8,13 @@
 	<title>
 		{% block title %}{% endblock %}
 	</title>
+	<meta property="og:title" content=Mapmaker.nl>
+	<meta property="og:site_name" content=Mapmaker>
+	<meta property="og:url" content=https://mapmaker.nl>
+	<meta property="og:description" content=We bring you the best workshops with our Mapmaker certified trainers, bring you the tools to get results out of your workshop. And we built the online tool that allows you to keep on making a difference even after the workshop is done.
+	>
+	<meta property="og:type" content=business.business>
+	<meta property="og:image" content=https://mapmaker.nl/static/images/heroimage.png><meta property="og:image" content=https://mapmaker.nl/static/images/joephero.png>
 	<meta name="description" content="Mapmaker Homepage" />
 	<meta name="keywords" content="Mapmaker workshop online tool netwerk" />
 	<meta name="author" content="Peter van Doorn" />
