changed slogan to Joeps

--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -7,8 +7,8 @@
 <section style="background-color: #F7F7F7;">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 grid lg:grid-cols-2 gap-8 lg:gap-16">
       <div class="flex flex-col justify-center">
-          <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Keep the discussion going after the workshop is done</h1>
-          <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl ">Create maps and collaborate like never before.</p>
+          <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Create big picture workshops</h1>
+          <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl ">Keep the discussion going after the workshop is done</p>
           {% include 'sign_up_marketing.html' %}
 
       </div>
