--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -8,7 +8,7 @@
 	<title>
 		{% block title %}{% endblock %}
 	</title>
-	<meta property="og:title" content="Mapmaker.nl">
+	<meta property="og:title" content="Create big picture workshops">
 	<meta property="og:site_name" content="Mapmaker">
 	<meta property="og:url" content="https://mapmaker.nl">
 	<meta property="og:description" content="We bring you the best workshops with our Mapmaker certified trainers, bring you the tools to get results out of your workshop. And we built the online tool that allows you to keep on making a difference even after the workshop is done.">
