added 2 links to contact and blog to header

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -140,6 +140,12 @@
 
 		{% else%}
 		<li>
+			<a href="/contact" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Contact</a>
+		</li>
+		<li>
+			<a href="/blog" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Blog</a>
+		</li>
+		<li>
 			<a href="/user/login" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 " aria-current="page">Log in</a>
 		</li>
 		{% endif %}
