added my favicon to blogposts

--- a/src/homepage/templates/request_order.html
+++ b/src/homepage/templates/request_order.html
@@ -9,7 +9,7 @@
             <header class="mb-4 lg:mb-6 not-format">
                 <address class="flex items-center mb-6 not-italic">
                     <div class="inline-flex items-center mr-3 text-sm text-gray-900">
-                        <img class="mr-4 w-16 h-16 rounded-full" src="https://flowbite.com/docs/images/people/profile-picture-2.jpg" alt="Jese Leos">
+                        <img class="mr-4 w-16 h-16 rounded-full" src="{% static '/images/peterhero.png' %}" alt="Peter van Doorn">
                         <div>
                             <a href="#" rel="author" class="text-xl font-bold text-gray-900 ">Peter van Doorn</a>
                             <p class="text-base font-light text-gray-500 ">Programmer, workshop host & co-founder Mapmaker.nl</p>
