--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -63,7 +63,7 @@
 </section>
 <section class="bg-gray-50 ">
   <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-      <img class="w-full dark:hidden rounded-lg blur-sm" src="{% static '/images/democard.png' %}" alt="dashboard image">
+      <img class="w-full dark:hidden rounded-lg blur-sm" src="{% static '/images/card1.jpeg' %}" alt="dashboard image">
       <div class="mt-4 md:mt-0">
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">Bring your workshop to life with our rewritable cards.</h2>
 
