--- a/src/dashboard/templates/dashboard_index.html
+++ b/src/dashboard/templates/dashboard_index.html
@@ -6,11 +6,11 @@
   <div style="display: inline-block; margin-left: 150px;">
     <div id="zoom">
       {% if zoomlevel == '0' %}
-        {% include 'grid_zoom_standard.html' with cards=cards %}
+        {% include 'grid_zoom_standard.html' with workshop=workshop cards=cards %}
       {% elif zoomlevel == '1' %}
-        {% include 'grid_zoom_out.html' with cards=cards %}
+        {% include 'grid_zoom_out.html' with workshop=workshop cards=cards %}
       {% elif zoomlevel == '2' %}
-        {% include 'grid_zoom_in.html' with cards=cards %}
+        {% include 'grid_zoom_in.html' with workshop=workshop cards=cards %}
       {% endif %}
     </div>
   </div>
@@ -19,5 +19,5 @@
   setTimeout(function(){ ScreenshotReady() }, 2000);
 </script>
 
-{% include 'legend.html' %}
+{% include 'legend.html' with workshop=workshop %}
 {% endblock %}
