added image and admin

--- a/src/homepage/templates/related_articles.html
+++ b/src/homepage/templates/related_articles.html
@@ -6,7 +6,7 @@
         <div class="grid gap-12 sm:grid-cols-2 lg:grid-cols-4">
             <article class="max-w-xs">
                 <a href="/product/cards">
-                    <img src="{% static '/images/card1.jpeg' %}" class="mb-5 rounded-lg" alt="Image 1">
+                    <img src="{% static '/images/cards1.jpeg' %}" class="mb-5 rounded-lg" alt="Image 1">
                 </a>
                 <h2 class="mb-2 text-xl font-bold leading-tight text-gray-900 -white">
                     <a href="/product/cards">Our hexagon shaped cards</a>
