--- a/src/homepage/templates/productcards.html
+++ b/src/homepage/templates/productcards.html
@@ -26,7 +26,7 @@ URL: https://flowbite.com/docs/components/typography/
                 <h1 class="mb-4 text-3xl font-extrabold leading-tight text-gray-900 lg:mb-6 lg:text-4xl">Mapmaker Cardset</h1>
             </header>
             <p class="lead">Mapmaker is a company that offers a variety of workshops, cards and an online platform to help people and organizations to become more creative, innovative, and productive. </p>
-            <figure><img src="{% static '/images/card1.jpeg' %}" alt="">
+            <figure><img src="{% static '/images/cards1.jpeg' %}" alt="">
                 <figcaption>The cards from the cardset</figcaption>
             </figure>
             <section class="bg-white dark:bg-gray-900">
