--- a/src/homepage/templates/homepage.html
+++ b/src/homepage/templates/homepage.html
@@ -55,20 +55,24 @@
             </a>
         </div>
         <div class="grid grid-cols-2 gap-4 mt-8">
-            <img class="w-full rounded-lg blur-sm" src="{% static '/images/workshop.png' %}" alt="office content 1">
-            <img class="mt-4 w-full lg:mt-10 rounded-lg blur-sm" src="{% static '/images/joephero.png' %}" alt="office content 2">
+            <img class="w-full rounded-lg" src="{% static '/images/workshop.png' %}" alt="office content 1">
+            <img class="mt-4 w-full lg:mt-10 rounded-lg" src="{% static '/images/joephero.png' %}" alt="office content 2">
 
         </div>
     </div>
 </section>
 <section class="bg-gray-50 ">
   <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-      <img class="w-full dark:hidden rounded-lg blur-sm" src="{% static '/images/cards1.jpeg' %}" alt="dashboard image">
+    <div class="grid grid-cols-2 gap-4 mt-8">
+      <img class="w-full rounded-lg" src="{% static '/images/cards3.jpeg' %}" alt="office content 1">
+      <img class="mt-4 w-full lg:mt-10 rounded-lg" src="{% static '/images/cards4.jpeg' %}" alt="office content 2">
+
+  </div>
       <div class="mt-4 md:mt-0">
           <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">Bring your workshop to life with our rewritable cards.</h2>
 
           <p class="mb-6 font-light text-gray-500 md:text-lg ">Create your own mappings on any topic you lie, using the beautiful Mapmaker custom cards. Break complex problems down into small bite-size chunks without using endless post its. And after the session; you continue working in the Mapmaker custom dashboard. </p>
-          
+           
           <a href="/product/cards" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
             Learn more about our custom cardset
           </a>
@@ -92,7 +96,7 @@
             </a>
         </div>
         <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-            <img class="rounded-lg blur-sm" src="{% static '/images/heroimage.png' %}" alt="mockup">
+            <img class="rounded-lg" src="{% static '/images/heroimage.png' %}" alt="mockup">
         </div>                
     </div>
 </section>
@@ -100,7 +104,7 @@
 
   <section class="bg-gray-50 ">
     <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
-        <img class="w-full dark:hidden rounded-lg blur-sm"src="{% static '/images/workshoptable.png' %}" alt="dashboard image">
+        <img class="w-full rounded-lg"src="{% static '/images/workshoptable.png' %}" alt="dashboard image">
         <div class="mt-4 md:mt-0">
             <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 ">Our certified trainers host the workshop for you</h2>
             <p class="mb-6 font-light text-gray-500 md:text-lg ">Just worry about the content, our certified Mapmaker trainers are experienced in making sure your session produces output.</p>
