--- a/src/card_interactions/templates/edit_title.html
+++ b/src/card_interactions/templates/edit_title.html
@@ -2,7 +2,7 @@
 
 <form hx-post="/card/{{ cardid }}/edit/title/" hx-target="this" hx-indicator="#spinner" hx-swap="innerHTML">
 
-    {% if type == 'ambition' %}
+    {% if type == 'legend_1' %}
     <div style="background: #000000; color: #fff" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
         <img src="{% static '/icons/flag-solid.svg' %}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
@@ -14,7 +14,7 @@
         <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
     </div>
     </div>
-{% elif type == 'challenge' %}
+{% elif type == 'legend_2' %}
         <div style="background: #E6799D;"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-2xl fa-mountain"></i><br>
@@ -25,7 +25,7 @@
             </div>
             </div>
             
-{% elif type == 'idea' %}
+{% elif type == 'legend_3' %}
         <div style="background: #51c1ff;"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-2xl fa-eye"></i><br>
@@ -35,7 +35,7 @@
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
             </div>
             </div>
-{% elif type == 'pro' %}
+{% elif type == 'legend_4' %}
         <div style="background: #ffeb39; " class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-circle-up fa-2xl"></i><br>
@@ -46,7 +46,7 @@
 
             </div>
             </div>
-{% elif type == 'con' %}          
+{% elif type == legend_5 %}          
         <div style="background: #78E7BF;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-circle-down fa-2xl"></i><br>
