--- a/src/homepage/templates/productcards.html
+++ b/src/homepage/templates/productcards.html
@@ -38,15 +38,15 @@ URL: https://flowbite.com/docs/components/typography/
 
             </p><br><br>
             <p>
-                One of the key features of Mapmaker's hexagon-shaped cards is their unique design. Unlike traditional rectangular-shaped cards, these cards have six sides, allowing participants to organize their ideas in a more flexible and dynamic way. This design encourages participants to think outside the box and explore new connections and possibilities that may not be immediately apparent with traditional cards.
+                One of the key features of Mapmaker's hexagon-shaped cards is their unique design. Unlike traditional rectangular-shaped cards, these cards have six sides, allowing participants to organize their legend_3s in a more flexible and dynamic way. This design encourages participants to think outside the box and explore new connections and possibilities that may not be immediately apparent with traditional cards.
             </p><br><br>
             <p>
-                Another important feature of Mapmaker's hexagon-shaped cards is their versatility. These cards can be used in a variety of ways, from brainstorming and ideation to project management and task tracking. This makes them an ideal tool for individuals and teams who want to stay organized and productive, even when working on complex or multifaceted projects.
+                Another important feature of Mapmaker's hexagon-shaped cards is their versatility. These cards can be used in a variety of ways, from brainstorming and legend_3tion to project management and task tracking. This makes them an legend_3l tool for individuals and teams who want to stay organized and productive, even when working on complex or multifaceted projects.
 
 
             </p><br><br>
             <p>
-                Perhaps most importantly, Mapmaker's hexagon-shaped cards are designed to work seamlessly with our online platform. The cards are color-coded to match the different categories and sections of the platform, allowing participants to easily organize and transfer their ideas from the physical cards to the online platform and vice versa. This integration creates a seamless and cohesive learning experience that allows participants to fully engage with the content and achieve their learning objectives.
+                Perhaps most importantly, Mapmaker's hexagon-shaped cards are designed to work seamlessly with our online platform. The cards are color-coded to match the different categories and sections of the platform, allowing participants to easily organize and transfer their legend_3s from the physical cards to the online platform and vice versa. This integration creates a seamless and cohesive learning experience that allows participants to fully engage with the content and achieve their learning objectives.
 
 
             </p><br><br>
