--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -235,7 +235,8 @@
         </div>
         <hr class="my-6 border-gray-200 sm:mx-auto  lg:my-8" />
         <div class="sm:flex sm:items-center sm:justify-between">
-            <span class="text-sm text-gray-500 sm:text-center ">© 2023 <a href="https://flowbite.com" class="hover:underline">Mapmaker™</a>. All Rights Reserved.
+            <span class="text-sm text-gray-500 sm:text-center "><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons-Licentie" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a>Dit werk valt onder een <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Naamsvermelding-NietCommercieel-GeenAfgeleideWerken 4.0 Internationaal-licentie</a>
+
             </span>
             <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
                 <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
