--- a/src/dashboard/templates/grid_zoom_standard.html
+++ b/src/dashboard/templates/grid_zoom_standard.html
@@ -85,27 +85,27 @@
             <div class="hexagonhidden flex items-center" style="pointer-events: none;" ><input type='hidden' name='item' value='{{ card.id}}'/>   
             {% endif %}
             </div>
-        {% elif card.cardtype == 'ambition' %}
+        {% elif card.cardtype == 'legend_1' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #000000; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img style="filter: invert(100%)  brightness(119%) contrast(119%);" src="{% static '/icons/flag-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{ card.title|truncatechars:20}}
             </div>
-        {% elif card.cardtype == 'challenge' %}
+        {% elif card.cardtype == 'legend_2' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #E6799D;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/mountain-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{ card.title|truncatechars:20}}
             </div>
-        {% elif card.cardtype == 'idea' %}
+        {% elif card.cardtype == 'legend_3' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #51c1ff;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/lightbulb-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{ card.title|truncatechars:20}}
             </div>
-        {% elif card.cardtype == 'pro' %}
+        {% elif card.cardtype == 'legend_4' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #ffeb39;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/thumbs-up-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{ card.title|truncatechars:20}}
             </div>
-        {% elif card.cardtype == 'con' %}
+        {% elif card.cardtype == 'legend_5' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #78E7BF;"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/thumbs-down-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{ card.title|truncatechars:20}}
