--- a/src/dashboard/templates/legend.html
+++ b/src/dashboard/templates/legend.html
@@ -2,7 +2,7 @@
 
     <div class="visible sm:invisible" style="position:absolute; top:15%; left: 25px; position: fixed;">
         <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow  ">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Legend</h5>
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Legenda</h5>
             <ul>
                 <span class="flex items-center">
                     <svg style='scale:0.5;' fill="#{{workshop.legend.legend_hex_color_1}}" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px" viewBox="-165.13 -165.13 815.95 815.95" xml:space="preserve" stroke="#{{workshop.legend.legend_hex_color_1}}" stroke-width="48.568799999999996"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#ffeb39" stroke-width="1.942752"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878 l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"></path> </g> </g> </g></svg>
