--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -199,24 +199,30 @@
             </div>
             <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
                 <div>
-                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Website</h2>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">About us</h2>
                     <ul class="text-gray-600 ">
                         <li class="mb-4">
-                            <a href="/user/login" class="hover:underline">Platform</a>
+                            <a href="/blog" class="hover:underline">Blog</a>
                         </li>
-                        <li>
+                        <li class="mb-4">
                             <a href="/contact" class="hover:underline">Contact</a>
+                        </li>
+						<li class="mb-4">
+                            <a href="https://github.com/two-trick-pony-NL/mapmaker" class="hover:underline">Source Code</a>
                         </li>
                     </ul>
                 </div>
                 <div>
-                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Products us</h2>
+                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Products</h2>
                     <ul class="text-gray-600 ">
                         <li class="mb-4">
                             <a href="/product/cards" class="hover:underline ">Cards</a>
                         </li>
-                        <li>
+                        <li class="mb-4">
                             <a href="/product/workshop" class="hover:underline">Workshop</a>
+                        </li>
+						<li class="mb-4">
+                            <a href="/user/login" class="hover:underline">Platform</a>
                         </li>
                     </ul>
                 </div>
@@ -226,8 +232,11 @@
                         <li class="mb-4">
                             <a href="/legal/privacy" class="hover:underline">Privacy Policy</a>
                         </li>
-                        <li>
+                        <li class="mb-4">
                             <a href="/legal/terms" class="hover:underline">Terms &amp; Conditions</a>
+                        </li>
+						<li class="mb-4">
+                            <a href="https://github.com/two-trick-pony-NL/mapmaker/blob/master/LICENSE" class="hover:underline">License</a>
                         </li>
                     </ul>
                 </div>
