fixed legend 5 not editable

--- a/src/card_interactions/templates/edit_title.html
+++ b/src/card_interactions/templates/edit_title.html
@@ -46,7 +46,7 @@
 
             </div>
             </div>
-{% elif type == legend_5 %}          
+{% elif type == 'legend_5' %}          
         <div style="background: #78E7BF;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-circle-down fa-2xl"></i><br>
