--- a/src/card_interactions/templates/new_title.html
+++ b/src/card_interactions/templates/new_title.html
@@ -59,7 +59,14 @@
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Start editing</h5>
                 <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">New card</h1>
             </div>
-            </div>            
+            </div>
+{% elif type == 'image_card' %}          
+<div cursor: pointer;" class="w-full my-4 max-w bg-white border border-gray-200 rounded-lg shadow  ">
+    <div class="flex flex-col align-text-top items-center m-8">
+        <img class="h-auto max-w-full" src="https://static01.nyt.com/images/2020/12/14/well/14google-photo/14google-photo-videoSixteenByNineJumbo1600.jpg" alt="image description">
+
+    </div>
+    </div>    
 {% endif %}
 
 {% if user.is_authenticated %}
