--- a/src/dashboard/templates/grid_zoom_standard.html
+++ b/src/dashboard/templates/grid_zoom_standard.html
@@ -111,7 +111,8 @@
                 {{ card.title|truncatechars:20}}
             </div>
         {% elif card.cardtype == 'image_card' %}
-        <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url(https://fastly.picsum.photos/id/866/200/300.jpg?hmac=rcadCENKh4rD6MAp6V_ma-AyWv641M4iiOpe1RyFHeI');"><input type='hidden' name='item' value='{{ card.id}}'/>            
+        <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('https://static01.nyt.com/images/2020/12/14/well/14google-photo/14google-photo-videoSixteenByNineJumbo1600.jpg'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+
         </div>
     {% endif %}
     {% endfor %}
